--- a/Codeforces/Codeforces.vcxproj
+++ b/Codeforces/Codeforces.vcxproj
@@ -147,7 +147,7 @@
     <Text Include="output.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="In-Progress\1552D Array Differentiation.cpp" />
+    <ClCompile Include="In-Progress\1555D Say No to Palindromes.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
